# smart-scaffold

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
smart_scaffold/: agents.py  main.py  tui.py  utils.py
smart_scaffold/modules/config/: main.py  utils.py
smart_scaffold/modules/recipes/: main.py  prompts.py  utils.py
smart_scaffold/schemas/: recipe.schema.json
